<resources>
    <string name="app_name">Chitta</string>
    <string name="about_page">About Page</string>
    <string name="Project_description1">This project is made in partial fulfillment of requirements of the sixth semester.</string>
    <string name="Credits">This project is made by Pragya Ravindrakumar Mugale (1MV20CS077), Shreyansh Gupta (1MV20CS105), and Uttam Bindal (1MV20CS120).</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="take_test">Take Test</string>
    <string name="meditate">Meditate</string>
    <string name="tips_amp_tricks"><![CDATA[Tips & Tricks]]></string>
    <string name="about">About</string>
    <string name="highest_timer">Highest Timer:</string>
    <string name="timer_field">Set Timer (in Minutes)</string>
    <string name="start">Start</string>
    <string name="countdown_timer">Countdown Timer</string>
    <string name="start_guided_meditation">Start Guided Meditation</string>
    <string name="app_description">Boost Your Well-being: \n Explore, Meditate, and Learn\n with Our App</string>
    <string name="logo">logo</string>
    <string name="head1">Managing Academic Stress:</string>
    <string name="tip1">Break tasks into smaller, manageable chunks. This will help you feel less overwhelmed and more in control.</string>
    <string name="tip2">Use productivity techniques like the Pomodoro Technique. This involves working in short bursts of 25 minutes with 5-minute breaks in between.</string>
    <string name="tip3">Practice effective study strategies. This could include creating organized study schedules, using mnemonic devices, or finding a study buddy.</string>
    <string name="head2">Enhancing Sleep Quality</string>
    <string name="tip4">Establish a consistent sleep schedule. Aim for going to bed and waking up at the same time each day, even on weekends.</string>
    <string name="tip5">Create a relaxing bedtime routine. This could include taking a warm bath, reading a book, or listening to calming music.</string>
    <string name="tip6">Keep your sleep environment comfortable, quiet, and dark. This will help you fall asleep more easily and wake up feeling refreshed.</string>
    <string name="head3">Cultivating Mindfulness</string>
    <string name="tip7">Start with short mindfulness exercises. These could include focused breathing or body scans.</string>
    <string name="tip8">Practice mindful eating. This means savoring each bite and paying attention to the flavors, textures, and sensations of your food.</string>
    <string name="tip9">Incorporate mindful walking into your daily routine. Pay attention to the sensations of each step and the environment around you.</string>
    <string name="head4">Managing Social Pressure</string>
    <string name="tip10">Prioritize quality over quantity in friendships. Focus on cultivating a few meaningful connections rather than trying to please everyone.</string>
    <string name="tip11">Set healthy boundaries. Learn to say no when necessary and don\'t overcommit yourself.</string>
    <string name="tip12">Seek support from trusted friends or campus support services. If you\'re feeling overwhelmed or experiencing social anxiety, reach out for help.</string>
    <string name="head5">Promoting Self-Care</string>
    <string name="tip13">Find activities that bring you joy. Make time for these activities regularly, whether it\'s practicing a hobby, spending time in nature, or listening to music.</string>
    <string name="tip14">Take breaks throughout the day to recharge. This could involve stretching, deep breathing, or practicing mindfulness exercises.</string>
    <string name="tip15">Practice self-compassion. Be kind to yourself, acknowledge your accomplishments, and treat yourself with the same care you would give to a friend.</string>
    <string name="stop">stop</string>
</resources>