<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    >
    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="30dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />
    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_below="@id/logo"
        android:layout_marginTop="40dp"
        android:textColorHint="@color/orangeText"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:autofillHints="emailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_below="@id/editTextUsername"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:autofillHints="password"
        android:layout_marginVertical="40dp"
        android:textColorHint="@color/orangeText"
        android:textSize="25sp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_below="@id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/orangeText"
        android:layout_below="@id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

</RelativeLayout>
