<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_centerHorizontal="true"
        android:maxLines="2"
        android:layout_below="@+id/logo"
        android:textColor="@color/orangeText"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/app_description"/>

    <EditText
        android:id="@+id/editTextNewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/orangeText"
        android:layout_below="@+id/title"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/orangeText"
        android:layout_below="@+id/editTextNewUsername"
        android:layout_marginVertical="30dp"
        android:textSize="25sp"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNewPassword"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up" />

</RelativeLayout>
